--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.3.1",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "openai": "^5.20.2",
     "react": "^19.1.1",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.1",
